helm/metabase/metabase-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: metabase-vs
  namespace: metabase
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingressgateway
  http:
    - match:
        - uri:
            prefix: /metabase
      route:
        - destination:
            host: metabase.metabase.svc.cluster.local
            port:
              number: 80
